--- a/src/sass/page-header.scss
+++ b/src/sass/page-header.scss
@@ -184,3 +184,8 @@
     background-position: center;
 }
 
+@media(min-width:660px){
+    .page-header--photo{
+        padding-bottom: 370px;
+    }
+}
