--- a/src/sass/users-photo.scss
+++ b/src/sass/users-photo.scss
@@ -49,7 +49,7 @@
     height: 35px;
     text-align: center;
     line-height: 37px;
-
+    font-size: 12px;
 }
 
 .photo-info{
@@ -86,3 +86,33 @@
     vertical-align: bottom;
 }
 
+@media(min-width:660px){
+    .users-photo{
+        margin-top: -260px;
+    }
+
+    .users-photo__h1{
+        font-size: 50px;
+        width: 380px;
+        padding-bottom: 200px;
+    }
+
+    .users-photo__text{
+        width: 450px;
+        font-size: 18px;
+        padding-bottom: 80px;
+    }
+
+    .panorama:after{
+        right:25%;
+    }
+
+    .panorama__description{
+        width: 620px;
+    }
+
+    .users-photo__wrp{
+        display: flex;
+        flex-direction: row;
+    }
+}
